<resources>
    <string name="app_name">Pokémon Team Builder</string>
    <item type="string" name="databaseVersion" format="integer">1</item>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash Page</string>
    <string name="title_activity_add_pokemon">Add Pokémon</string>

    <string name="enterpkmn">Enter your Pokémon</string>
    <string name="submit">Submit</string>
    <string name="teamresults">Your Team\'s Result</string>
    <string name="warning">You are missing Pokémon from your team!</string>
    <string name="pkmn1">Your 1st Pokémon:</string>
    <string name="pkmn2">Your 2nd Pokémon:</string>
    <string name="pkmn3">Your 3rd Pokémon:</string>
    <string name="pkmn4">Your 4th Pokémon:</string>
    <string name="pkmn5">Your 5th Pokémon:</string>
    <string name="pkmn6">Your 6th Pokémon:</string>
    <string name="typeChart">Gen 7 Type Weakness Chart</string>
    <string name="teamList">Team Weakness and Strength List</string>

    <string name="title_activity_pokemon_results">Team Results</string>
    <string name="intro">Welcome to the Team Builder Android application.
        You can currently choose between viewing a type weakness chart (updated for Gen 7) or to enter
        your current team and see the strengths weaknesses of it.</string>
    <string name="type">Type</string>
    <string name="zero">0</string>
    <string name="quart">1/4x</string>
    <string name="half">1/2x</string>
    <string name="neut">1x</string>
    <string name="doub">2x</string>
    <string name="quad">4x</string>

    <string name="ty_norm">Normal</string>
    <string name="ty_fight">Fighting</string>
    <string name="ty_fly">Flying</string>
    <string name="ty_pois">Poison</string>
    <string name="ty_grou">Ground</string>
    <string name="ty_rock">Rock</string>
    <string name="ty_bug">Bug</string>
    <string name="ty_ghos">Ghost</string>
    <string name="ty_stee">Steel</string>
    <string name="ty_fire">Fire</string>
    <string name="ty_wate">Water</string>
    <string name="ty_gras">Grass</string>
    <string name="ty_elec">Electric</string>
    <string name="ty_psyc">Psychic</string>
    <string name="ty_ice">Ice</string>
    <string name="ty_drag">Dragon</string>
    <string name="ty_dark">Dark</string>
    <string name="ty_fair">Fairy</string>


    <string-array name="lstPkmn">
        <item>Bulbasaur</item>
        <item>Ivysaur</item>
        <item>Venusaur</item>
        <item>Charmander</item>
        <item>Charmeleon</item>
        <item>Charizard</item>
        <item>Squirtle</item>
        <item>Wartortle</item>
        <item>Blastoise</item>
        <item>Caterpie</item>
        <item>Metapod</item>
        <item>Butterfree</item>
        <item>Weedle</item>
        <item>Kakuna</item>
        <item>Beedrill</item>
        <item>Pidgey</item>
        <item>Pidgeotto</item>
        <item>Pidgeot</item>
        <item>Rattata</item>
        <item>Raticate</item>
        <item>Spearow</item>
        <item>Fearow</item>
        <item>Ekans</item>
        <item>Arbok</item>
        <item>Pikachu</item>
        <item>Raichu</item>
        <item>Sandshrew</item>
        <item>Sandslash</item>
        <item>Nidoran♀</item>
        <item>Nidorina</item>
        <item>Nidoqueen</item>
        <item>Nidoran♂</item>
        <item>Nidorino</item>
        <item>Nidoking</item>
        <item>Clefairy</item>
        <item>Clefable</item>
        <item>Vulpix</item>
        <item>Ninetales</item>
        <item>Jigglypuff</item>
        <item>Wigglytuff</item>
        <item>Zubat</item>
        <item>Golbat</item>
        <item>Oddish</item>
        <item>Gloom</item>
        <item>Vileplume</item>
        <item>Paras</item>
        <item>Parasect</item>
        <item>Venonat</item>
        <item>Venomoth</item>
        <item>Diglett</item>
        <item>Dugtrio</item>
        <item>Meowth</item>
        <item>Persian</item>
        <item>Psyduck</item>
        <item>Golduck</item>
        <item>Mankey</item>
        <item>Primeape</item>
        <item>Growlithe</item>
        <item>Arcanine</item>
        <item>Poliwag</item>
        <item>Poliwhirl</item>
        <item>Poliwrath</item>
        <item>Abra</item>
        <item>Kadabra</item>
        <item>Alakazam</item>
        <item>Machop</item>
        <item>Machoke</item>
        <item>Machamp</item>
        <item>Bellsprout</item>
        <item>Weepinbell</item>
        <item>Victreebel</item>
        <item>Tentacool</item>
        <item>Tentacruel</item>
        <item>Geodude</item>
        <item>Graveler</item>
        <item>Golem</item>
        <item>Ponyta</item>
        <item>Rapidash</item>
        <item>Slowpoke</item>
        <item>Slowbro</item>
        <item>Magnemite</item>
        <item>Magneton</item>
        <item>Farfetch\'d</item>
        <item>Doduo</item>
        <item>Dodrio</item>
        <item>Seel</item>
        <item>Dewgong</item>
        <item>Grimer</item>
        <item>Muk</item>
        <item>Shellder</item>
        <item>Cloyster</item>
        <item>Gastly</item>
        <item>Haunter</item>
        <item>Gengar</item>
        <item>Onix</item>
        <item>Drowzee</item>
        <item>Hypno</item>
        <item>Krabby</item>
        <item>Kingler</item>
        <item>Voltorb</item>
        <item>Electrode</item>
        <item>Exeggcute</item>
        <item>Exeggutor</item>
        <item>Cubone</item>
        <item>Marowak</item>
        <item>Hitmonlee</item>
        <item>Hitmonchan</item>
        <item>Lickitung</item>
        <item>Koffing</item>
        <item>Weezing</item>
        <item>Rhyhorn</item>
        <item>Rhydon</item>
        <item>Chansey</item>
        <item>Tangela</item>
        <item>Kangaskhan</item>
        <item>Horsea</item>
        <item>Seadra</item>
        <item>Goldeen</item>
        <item>Seaking</item>
        <item>Staryu</item>
        <item>Starmie</item>
        <item>Mr. Mime</item>
        <item>Scyther</item>
        <item>Jynx</item>
        <item>Electabuzz</item>
        <item>Magmar</item>
        <item>Pinsir</item>
        <item>Tauros</item>
        <item>Magikarp</item>
        <item>Gyarados</item>
        <item>Lapras</item>
        <item>Ditto</item>
        <item>Eevee</item>
        <item>Vaporeon</item>
        <item>Jolteon</item>
        <item>Flareon</item>
        <item>Porygon</item>
        <item>Omanyte</item>
        <item>Omastar</item>
        <item>Kabuto</item>
        <item>Kabutops</item>
        <item>Aerodactyl</item>
        <item>Snorlax</item>
        <item>Articuno</item>
        <item>Zapdos</item>
        <item>Moltres</item>
        <item>Dratini</item>
        <item>Dragonair</item>
        <item>Dragonite</item>
        <item>Mewtwo</item>
        <item>Mew</item>
    </string-array>
</resources>
