<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.co.marctowler.pokemonteambuilder.WelcomeActivity"
    tools:showIn="@layout/activity_welcome">

    <TextView
        android:text="@string/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_intro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/teamList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_PkmnList"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/typeChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_typechart"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/txt_intro"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
