<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_pokemon_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.co.marctowler.pokemonteambuilder.PokemonResults"
    tools:showIn="@layout/activity_pokemon_results">


    <TextView
        android:text="@string/teamresults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/resHeader"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/pkmn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:id="@+id/txt_pkmn1" />

    <TextView
        android:text="@string/pkmn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_pkmn2"
        android:layout_below="@+id/txt_pkmn1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:text="@string/pkmn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_pkmn2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/txt_pkmn3" />

    <TextView
        android:text="@string/pkmn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_pkmn3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/txt_pkmn4" />

    <TextView
        android:text="@string/pkmn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_pkmn4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/txt_pkmn5" />

    <TextView
        android:text="@string/pkmn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_pkmn5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/txt_pkmn6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_pkmn1"
        android:layout_toRightOf="@+id/txt_pkmn2"
        android:layout_toEndOf="@+id/txt_pkmn2"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/pulled1"
        android:text="test"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_pkmn2"
        android:layout_alignLeft="@+id/pulled1"
        android:layout_alignStart="@+id/pulled1"
        android:id="@+id/pulled2"
        android:text="test" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_pkmn3"
        android:layout_alignLeft="@+id/pulled2"
        android:layout_alignStart="@+id/pulled2"
        android:id="@+id/pulled3"
        android:text="test" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_pkmn4"
        android:layout_alignLeft="@+id/pulled3"
        android:layout_alignStart="@+id/pulled3"
        android:id="@+id/pulled4"
        android:text="tes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_pkmn5"
        android:layout_alignLeft="@+id/pulled4"
        android:layout_alignStart="@+id/pulled4"
        android:id="@+id/pulled5"
        android:text="tes" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_pkmn6"
        android:layout_alignLeft="@+id/pulled5"
        android:layout_alignStart="@+id/pulled5"
        android:id="@+id/pulled6"
        android:text="Text" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/type_chart_result"
        android:layout_below="@+id/txt_pkmn6"
        android:layout_marginTop="21dp" />


</RelativeLayout>
</ScrollView>
