<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_pokemon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.co.marctowler.pokemonteambuilder.AddPokemonActivity"
    tools:showIn="@layout/activity_add_pokemon">

    <AutoCompleteTextView
        android:hint="@string/enterpkmn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="119dp"
        android:id="@+id/pkmn1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:hint="@string/enterpkmn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/pkmn2"
        android:layout_below="@+id/pkmn1"
        android:layout_alignLeft="@+id/pkmn1"
        android:layout_alignStart="@+id/pkmn1" />

    <AutoCompleteTextView
        android:hint="@string/enterpkmn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/pkmn3"
        android:layout_below="@+id/pkmn2"
        android:layout_alignLeft="@+id/pkmn2"
        android:layout_alignStart="@+id/pkmn2" />

    <AutoCompleteTextView
        android:hint="@string/enterpkmn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pkmn3"
        android:layout_alignLeft="@+id/pkmn3"
        android:layout_alignStart="@+id/pkmn3"
        android:id="@+id/pkmn4" />

    <AutoCompleteTextView
        android:hint="@string/enterpkmn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pkmn4"
        android:layout_alignLeft="@+id/pkmn4"
        android:layout_alignStart="@+id/pkmn4"
        android:id="@+id/pkmn5" />

    <AutoCompleteTextView
        android:hint="@string/enterpkmn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pkmn5"
        android:layout_alignLeft="@+id/pkmn5"
        android:layout_alignStart="@+id/pkmn5"
        android:id="@+id/pkmn6" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:layout_below="@+id/pkmn6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:id="@+id/txt_warning"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/warning"
        android:visibility="invisible" />
</RelativeLayout>
</ScrollView>